--- a/donate.html
+++ b/donate.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Donate - Wokovuway Org.</title>
+    <title>Wokovuway Org.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Support Wokovuway Humanitarian Organization in rebuilding lives in Congo">
-    <meta name="keywords" content="Wokovuway, humanitarian, Congo, donate, charity, displaced families">
+    <meta name="description" content="Wokovuway Humanitarian Organization">
+    <meta name="keywords" content="Wokovuway, humanitarian, Congo, education, charity, responsive">
     <meta name="author" content="Wokovuway">
     <link rel="stylesheet" href="css/donate.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -16,7 +16,7 @@
         <!-- Header & Navigation -->
         <header id="wokovuway-header" class="sticky-header">
             <div class="nav-container">
-                <a href="index.html" class="logo">
+                <a href="#" class="logo">
                     <img src="images/logos1.png" alt="Wokovuway Logo" class="logo-img">
                     <span class="logo-text">Wokovuway Org</span>
                 </a>
@@ -145,10 +145,10 @@
                     <div class="footer-column">
                         <h4>Quick Links</h4>
                         <ul>
-                     <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="contact.html">contact</a></li>
-                    <li><a href="">Privacy and Policy</a></li>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="about.html">About Us</a></li>
+                            <li><a href="contact.html">contact</a></li>
+                            <li><a href="privacy.html">Privacy and Policy</a></li>
                         </ul>
                     </div>
                     <div class="footer-column">
