--- a/form.html
+++ b/form.html
@@ -14,7 +14,7 @@
         </div>
         <div class="donation-message">
             <p>
-                Please write to us about how you would like to help by choosing your donation type. 
+                Please write to us about how you would like to help by choosing your <i> donation type. </i>
                 Our team will reach out to you as soon as possible. 
                 Thank you for your donation to <strong>Wokovuway Organization</strong>. 
                 We assure you that every contribution, whether in cash or kind, 
