--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <div class="hamburger"><i class="fas fa-bars"></i></div>
                 <nav class="nav-menu">
                     <ul>
-                        <li><a href="index.html" class="active">Home</a></li>
-                        <li><a href="donate.html">Donate</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="donate.html" class="active">Donate</a></li>
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="success.html">Success Stories</a></li>
                         <li><a href="contact.html">Contact</a></li>
@@ -143,6 +143,8 @@
                         <h4>Contact</h4>
                         <p><strong>Address:</strong> Ndosho, Rulenga Avenue, N°003</p>
                         <p><strong>Phone:</strong> +243 123 456 789</p>
+                        <p><strong>Office:</strong> +243 123 456 789</p>
+                
                         <p><strong>Email:</strong> <a href="mailto:info@wokovuway.org">info@wokovuway.org</a></p>
                     </div>
                     <div class="footer-column">
