--- a/about.html
+++ b/about.html
@@ -86,8 +86,9 @@
                 </div>
                 <div class="footer-column">
                     <h4>Contact</h4>
-                    <p><strong>Address:</strong> Ndosho, Rulenga Avenue, N°003, Goma, DRC</p>
+                    <p><strong>Address:</strong> Ndosho, Rulenga Avenue, N°003</p>
                     <p><strong>Phone:</strong> +243 123 456 789</p>
+                    <p><strong>Office:</strong> +243 123 456 789</p>
                     <p><strong>Email:</strong> <a href="mailto:info@wokovuway.com">info@wokovuway.com</a></p>
                 </div>
                 <div class="footer-column">
@@ -96,7 +97,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="contact.html">contact</a></li>
-                        <li><a href="">Privacy and Policy</a></li>
+                        <li><a href="privacy.html">Privacy and Policy</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
