--- a/contact.html
+++ b/contact.html
@@ -82,6 +82,7 @@
                         <h4>Contact</h4>
                         <p><strong>Address:</strong> Ndosho, Rulenga Avenue, N°003</p>
                         <p><strong>Phone:</strong> +243 123 456 789</p>
+                        <p><strong>Office:</strong> +243 123 456 789</p>
                         <p><strong>Email:</strong> <a href="mailto:info@wokovuway.org">info@wokovuway.org</a></p>
                     </div>
                     <div class="footer-column">
@@ -89,8 +90,8 @@
                         <ul>
                             <li><a href="index.html">Home</a></li>
                             <li><a href="about.html">About Us</a></li>
-                            <li><a href="contact.html">Contact</a></li>
-                            <li><a href="#">Privacy and Policy</a></li>
+                            <li><a href="contact.html">contact</a></li>
+                            <li><a href="privacy.html">Privacy and Policy</a></li>
                         </ul>
                     </div>
                     <div class="footer-column">
@@ -103,6 +104,7 @@
                     </div>
                     <div class="partners">
                         <h4>Our Partners</h4>
+
                         <a href="https://www.partner1.com" target="_blank"><img src="images/men_en.png" alt="Partner 1"></a>
                         <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg" alt="Partner 2"></a>
                         <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp" alt="Partner 3"></a>
