--- a/about.html
+++ b/about.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Donate - Wokovuway Org.</title>
+    <title>About Us - Wokovuway Org.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Support Wokovuway Humanitarian Organization in rebuilding lives in Congo">
-    <meta name="keywords" content="Wokovuway, humanitarian, Congo, donate, charity, displaced families">
-    <meta name="author" content="Wokovuway">
+    <meta name="keywords" content="Wokovuway, humanitarian, Congo, about, charity, displaced families">
+        <meta name="author" content="Wokovuway">
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -89,7 +89,7 @@
                     <p><strong>Address:</strong> Ndosho, Rulenga Avenue, N°003</p>
                     <p><strong>Phone:</strong> +243 123 456 789</p>
                     <p><strong>Office:</strong> +243 123 456 789</p>
-                    <p><strong>Email:</strong> <a href="mailto:info@wokovuway.com">info@wokovuway.com</a></p>
+                    <p><strong>Email:</strong> <a href="mailto:info@wokovuway.org">info@wokovuway.org</a></p>
                 </div>
                 <div class="footer-column">
                     <h4>Quick Links</h4>
@@ -110,10 +110,10 @@
                 </div>
                 <div class="partners">
                     <h4>Our Partners</h4>
-                    <a href="https://menengage.org/" target="_blank"><img src="../images/men_en.png" alt="MenEngage"></a>
-                    <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="../images/uskin.jpg" alt="US Embassy Kinshasa"></a>
-                    <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="../images/med.webp" alt="Médecins Sans Frontières"></a>
-                    <a href="https://www.unfpa.org/" target="_blank"><img src="../images/unfpa.png" alt="UNFPA"></a>
+                    <a href="https://menengage.org/" target="_blank"><img src="images/men_en.png" alt="MenEngage"></a>
+                    <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg" alt="US Embassy Kinshasa"></a>
+                    <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp" alt="Médecins Sans Frontières"></a>
+                    <a href="https://www.unfpa.org/" target="_blank"><img src="images/unfpa.png" alt="UNFPA"></a>
                 </div>
             </div>
             <div class="footer-bottom">
