--- a/contact.html
+++ b/contact.html
@@ -23,10 +23,11 @@
                 <div class="hamburger"><i class="fas fa-bars"></i></div>
                 <nav class="nav-menu">
                     <ul>
-                        <li><a href="index.html" class="active">Home</a></li>
-                        <li><a href="donate.html">Donate</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="donate.html" class="active">Donate</a></li>
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="success.html">Success Stories</a></li>
+                        <li><a href="team.html">Our Team</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
@@ -90,7 +91,8 @@
                         <ul>
                             <li><a href="index.html">Home</a></li>
                             <li><a href="about.html">About Us</a></li>
-                            <li><a href="contact.html">contact</a></li>
+                            <li><a href="#">Services</a></li>
+                            <li><a href="#">Contact</a></li>
                             <li><a href="privacy.html">Privacy and Policy</a></li>
                         </ul>
                     </div>
