--- a/privacy.html
+++ b/privacy.html
@@ -27,7 +27,10 @@
                         <li><a href="donate.html">Donate</a></li>
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="success.html">Success Stories</a></li>
+                        <li><a href="team.html">Our Team</a></li>
+                        <li><a href="team.html">Our Team</a></li>
                         <li><a href="contact.html">Contact</a></li>
+                        
                     </ul>
                 </nav>
             </div>
