--- a/donate.html
+++ b/donate.html
@@ -27,6 +27,7 @@
                         <li><a href="donate.html" class="active">Donate</a></li>
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="success.html">Success Stories</a></li>
+                        <li><a href="team.html">Our Team</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
