--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="success.html">Success Stories</a></li>
                         <li><a href="contact.html">Contact</a></li>
+                        <li><a href="team.html">Our Team</a></li>
                     </ul>
                 </nav>
             </div>
