--- a/success.html
+++ b/success.html
@@ -30,6 +30,7 @@
                         <li><a href="donate.html">Donate</a></li>
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="success.html">Success Stories</a></li>
+                        <li><a href="team.html">Our Team</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
@@ -137,7 +138,6 @@
                         <li><a href="#">About Us</a></li>
                         <li><a href="#">Services</a></li>
                         <li><a href="#">Contact</a></li>
-                        <li><a href="#">Privacy and Policy</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
