--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
                         <li><a href="success.html">Success Stories</a></li>
                         <li><a href="contact.html">Contact</a></li>
                         <li><a href="team.html">Our Team</a></li>
+                        <li class="lang-toggle">
+                            <a href="#" id="translate-link"><i class="fas fa-globe"></i> Fr </a>
+                        </li>
                     </ul>
                 </nav>
             </div>
