--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Support Wokovuway Humanitarian Organization in rebuilding lives in Congo">
     <meta name="keywords" content="Wokovuway, humanitarian, Congo, about, charity, displaced families">
-        <meta name="author" content="Wokovuway">
+    <meta name="author" content="Wokovuway">
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -24,11 +24,14 @@
                 <nav class="nav-menu">
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="donate.html" class="active">Donate</a></li>
-                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="donate.html">Donate</a></li>
+                        <li><a href="about.html" class="active">About Us</a></li>
                         <li><a href="success.html">Success Stories</a></li>
                         <li><a href="team.html">Our Team</a></li>
                         <li><a href="contact.html">Contact</a></li>
+                        <li class="lang-toggle">
+                            <a href="#" id="translate-link"><i class="fas fa-globe"></i> Fr</a>
+                        </li>
                     </ul>
                 </nav>
             </div>
