--- a/contact_french.html
+++ b/contact_french.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Wokovuway Org.</title>
+    <title>Wokovuway Org. - Contact</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Organisation Humanitaire Wokovuway">
     <meta name="keywords" content="Wokovuway, humanitaire, Congo, éducation, charité, réactif">
@@ -13,7 +13,6 @@
 </head>
 <body>
     <div id="wokovuway-wrapper">
-        <!-- Header & Navigation -->
         <header id="wokovuway-header" class="sticky-header">
             <div class="nav-container">
                 <a href="#" class="logo">
@@ -24,24 +23,22 @@
                 <nav class="nav-menu">
                     <ul>
                         <li><a href="index_french.html">Accueil</a></li>
-                        <li><a href="donate_french.html">Faire un don</a></li>
                         <li><a href="about_french.html">À propos de nous</a></li>
-                        <li><a href="success_french.html">Histoires de succès</a></li>
                         <li><a href="team_french.html">Notre équipe</a></li>
-                        <li><a href="contact_french.html" class="active">Contact</a></li>
+                        <li><a href="success_french.html">Histoires de succès</a></li> <!-- Fixed empty href -->
+                        <li><a href="donate_french.html">Faire un don</a></li>
+                        <li><a href="contact_french.html" class="active">Contact</a></li> <!-- Set active here -->
                         <li class="lang-toggle">
-                            <a href="contact.html" id="translate-link"><i class="fas fa-globe"></i> EN</a>
+                            <a href="index.html" id="translate-link"><i class="fas fa-globe"></i> EN</a>
                         </li>
                     </ul>
                 </nav>
             </div>
         </header>
-
-        <!-- Contact Section -->
+        <!-- Rest of the HTML (contact section and footer) remains unchanged -->
         <section class="contact-section container">
             <h1 class="text-center">Prenez contact</h1>
             <p class="text-center lead">Nous serions ravis d'avoir de vos nouvelles ! Remplissez le formulaire ci-dessous, et nous vous répondrons dès que possible.</p>
-            
             <div class="row">
                 <div class="col-md-6">
                     <form action="#" method="POST" class="contact-form">
@@ -67,7 +64,7 @@
                 <div class="col-md-6 contact-info">
                     <h3>Informations de contact</h3>
                     <p><i class="fas fa-envelope"></i> Email : <a href="mailto:info@wokovuway.org">info@wokovuway.org</a></p>
-                    <p><i class="fas fa-phone"></i> Téléphone : +243 123 456 789</p>
+                    <p><i class="fas fa-phone"></i> Téléphone : +243 123 456 789debit</p>
                     <p><i class="fas fa-map-marker-alt"></i> Adresse : Ndosho, Avenue Rulenga, N°003</p>
                 </div>
             </div>
@@ -103,16 +100,22 @@
                         <h4>Suivez-nous</h4>
                         <div class="social-icons">
                             <a href="https://x.com/wokovuwayngo?s=21" target="_blank"><i class="fab fa-twitter"></i></a>
-                            <a href="https://www.facebook.com/wokovuway/" target="_blank"><i class="fab fa-facebook"></i></a>
-                            <a href="https://www.instagram.com/wokovuway" target="_blank"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.facebook.com/wokovuway/" target="_blank"><i
+                                    class="fab fa-facebook"></i></a>
+                            <a href="https://www.instagram.com/wokovuway" target="_blank"><i
+                                    class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                     <div class="partners">
                         <h4>Nos partenaires</h4>
-                        <a href="https://www.partner1.com" target="_blank"><img src="images/men_en.png" alt="Partenaire 1"></a>
-                        <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg" alt="Partenaire 2"></a>
-                        <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp" alt="Partenaire 3"></a>
-                        <a href="https://menengage.org/" target="_blank"><img src="images/unfpa.png" alt="Partenaire 4"></a>
+                        <a href="https://www.partner1.com" target="_blank"><img src="images/men_en.png"
+                                alt="Partenaire 1"></a>
+                        <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg"
+                                alt="Partenaire 2"></a>
+                        <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp"
+                                alt="Partenaire 3"></a>
+                        <a href="https://menengage.org/" target="_blank"><img src="images/unfpa.png"
+                                alt="Partenaire 4"></a>
                     </div>
                 </div>
             </div>
@@ -125,4 +128,5 @@
 
     <script src="js/contact.js"></script>
 </body>
+
 </html>
