--- a/donate.html
+++ b/donate.html
@@ -24,11 +24,13 @@
                 <nav class="nav-menu">
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="donate.html" class="active">Donate</a></li>
-                        <li><a href="about.html">About Us</a></li>
-                        <li><a href="success.html">Success Stories</a></li>
+                        <li><a href="about.html" class="active">About Us</a></li>
                         <li><a href="team.html">Our Team</a></li>
+                        <li><a href="success.html">Success Stories</a></li>
+                        <li><a href="donate.html">Donate</a></li>
                         <li><a href="contact.html">Contact</a></li>
+                        
+                       
                         <li class="lang-toggle">
                             <a href="#" id="translate-link"><i class="fas fa-globe"></i> Fr</a>
                         </li>
@@ -42,7 +44,7 @@
             <!-- Hero Section -->
             <section id="donation-hero">
                 <div class="slider">
-                    <div class="slide active" style="background-image: url('images/camp_visit.jpg');">
+                    <div class="slide active" style="background-image: url('images/camp_visit25.jpg');">
                         <div class="slide-content">
                             <h1>Rebuild Lives in Congo</h1>
                             <p>Support displaced families today</p>
