--- a/donate_french.html
+++ b/donate_french.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,6 +12,7 @@
     <link rel="stylesheet" href="css/donate.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
+
 <body>
     <div id="wokovuway-wrapper">
         <!-- Header & Navigation -->
@@ -24,13 +26,14 @@
                 <nav class="nav-menu">
                     <ul>
                         <li><a href="index_french.html">Accueil</a></li>
-                        <li><a href="donate_french.html" class="active">Faire un don</a></li>
-                        <li><a href="about_french.html">À propos de nous</a></li>
-                        <li><a href="success_french.html">Histoires de succès</a></li>
+                        <li><a href="about_french.html" class="active">À propos de nous</a></li>
                         <li><a href="team_french.html">Notre équipe</a></li>
+                        <li><a href="">Histoires de succès</a></li>
+                        <li><a href="donate_french.html">Faire un don</a></li>
                         <li><a href="contact_french.html">Contact</a></li>
+
                         <li class="lang-toggle">
-                            <a href="donate.html" id="translate-link"><i class="fas fa-globe"></i> EN</a>
+                            <a href="" id="translate-link"><i class="fas fa-globe"></i> EN</a>
                         </li>
                     </ul>
                 </nav>
@@ -46,28 +49,32 @@
                         <div class="slide-content">
                             <h1>Reconstruire des vies au Congo</h1>
                             <p>Soutenir les familles déplacées aujourd'hui</p>
-                            <a href="https://www.gofundme.com/f/rebuild-lives-in-congo-support-displaced-families-today" target="_blank" class="btn">Faire un don maintenant</a>
+                            <a href="https://www.gofundme.com/f/rebuild-lives-in-congo-support-displaced-families-today"
+                                target="_blank" class="btn">Faire un don maintenant</a>
                         </div>
                     </div>
                     <div class="slide" style="background-image: url('images/IMG_1104.JPG');">
                         <div class="slide-content">
                             <h1>Aide d'urgence</h1>
                             <p>Fournir nourriture, eau et abri</p>
-                            <a href="https://www.gofundme.com/f/rebuild-lives-in-congo-support-displaced-families-today" target="_blank" class="btn">Soutenez-nous</a>
+                            <a href="https://www.gofundme.com/f/rebuild-lives-in-congo-support-displaced-families-today"
+                                target="_blank" class="btn">Soutenez-nous</a>
                         </div>
                     </div>
                     <div class="slide" style="background-image: url('images/goma.JPG');">
                         <div class="slide-content">
                             <h1>Espoir pour les enfants</h1>
                             <p>Aider les orphelins à guérir et à rêver à nouveau</p>
-                            <a href="https://www.gofundme.com/f/rebuild-lives-in-congo-support-displaced-families-today" target="_blank" class="btn">Donner maintenant</a>
+                            <a href="https://www.gofundme.com/f/rebuild-lives-in-congo-support-displaced-families-today"
+                                target="_blank" class="btn">Donner maintenant</a>
                         </div>
                     </div>
                     <div class="slide" style="background-image: url('images/camp_j.JPG');">
                         <div class="slide-content">
                             <h1>Votre compassion compte</h1>
                             <p>Apporter de la dignité à ceux dans le besoin</p>
-                            <a href="https://www.gofundme.com/f/rebuild-lives-in-congo-support-displaced-families-today" target="_blank" class="btn">Faire un don aujourd'hui</a>
+                            <a href="https://www.gofundme.com/f/rebuild-lives-in-congo-support-displaced-families-today"
+                                target="_blank" class="btn">Faire un don aujourd'hui</a>
                         </div>
                     </div>
                 </div>
@@ -82,8 +89,10 @@
                     <div class="donation-row">
                         <div class="donation-item">
                             <h3>Soutenez-nous sur GoFundMe</h3>
-                            <p>Participez à notre campagne pour reconstruire des vies pour les familles déplacées au Congo.</p>
-                            <a href="https://www.gofundme.com/f/rebuild-lives-in-congo-support-displaced-families-today" target="_blank" class="btn">Faire un don maintenant</a>
+                            <p>Participez à notre campagne pour reconstruire des vies pour les familles déplacées au
+                                Congo.</p>
+                            <a href="https://www.gofundme.com/f/rebuild-lives-in-congo-support-displaced-families-today"
+                                target="_blank" class="btn">Faire un don maintenant</a>
                         </div>
                         <div class="donation-item">
                             <h3>Virement bancaire</h3>
@@ -94,7 +103,8 @@
                                 <li><strong>CITIBANK NEW YORK :</strong> CITI US 3X</li>
                                 <li><strong>COMMERZBANK A.G. :</strong> COBADEFF</li>
                             </ul>
-                            <p>Contactez-nous à <a href="mailto:info@wokovuway.org">info@wokovuway.org</a> pour assistance.</p>
+                            <p>Contactez-nous à <a href="mailto:info@wokovuway.org">info@wokovuway.org</a> pour
+                                assistance.</p>
                         </div>
                         <div class="donation-item">
                             <h3>Autres alternatives</h3>
@@ -159,16 +169,22 @@
                         <h4>Suivez-nous</h4>
                         <div class="social-icons">
                             <a href="https://x.com/wokovuwayngo?s=21" target="_blank"><i class="fab fa-twitter"></i></a>
-                            <a href="https://www.facebook.com/wokovuway/" target="_blank"><i class="fab fa-facebook"></i></a>
-                            <a href="https://www.instagram.com/wokovuway" target="_blank"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.facebook.com/wokovuway/" target="_blank"><i
+                                    class="fab fa-facebook"></i></a>
+                            <a href="https://www.instagram.com/wokovuway" target="_blank"><i
+                                    class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                     <div class="partners">
                         <h4>Nos partenaires</h4>
-                        <a href="https://www.partner1.com" target="_blank"><img src="images/men_en.png" alt="Partenaire 1"></a>
-                        <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg" alt="Partenaire 2"></a>
-                        <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp" alt="Partenaire 3"></a>
-                        <a href="https://menengage.org/" target="_blank"><img src="images/unfpa.png" alt="Partenaire 4"></a>
+                        <a href="https://www.partner1.com" target="_blank"><img src="images/men_en.png"
+                                alt="Partenaire 1"></a>
+                        <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg"
+                                alt="Partenaire 2"></a>
+                        <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp"
+                                alt="Partenaire 3"></a>
+                        <a href="https://menengage.org/" target="_blank"><img src="images/unfpa.png"
+                                alt="Partenaire 4"></a>
                     </div>
                 </div>
             </div>
@@ -180,4 +196,5 @@
     </div>
     <script src="js/donate.js"></script>
 </body>
+
 </html>
