--- a/index.html
+++ b/index.html
@@ -24,13 +24,14 @@
                 <nav class="nav-menu">
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="donate.html" class="active">Donate</a></li>
-                        <li><a href="about.html">About Us</a></li>
-                        <li><a href="success.html">Success Stories</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="about.html" class="active">About Us</a></li>
                         <li><a href="team.html">Our Team</a></li>
+                        <li><a href="success.html">Success Stories</a></li>
+                        <li><a href="donate.html">Donate</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                        
                         <li class="lang-toggle">
-                            <a href="#" id="translate-link"><i class="fas fa-globe"></i> Fr </a>
+                            <a href="" id="translate-link"><i class="fas fa-globe"></i> Fr </a>
                         </li>
                     </ul>
                 </nav>
