--- a/index_french.html
+++ b/index_french.html
@@ -24,13 +24,14 @@
                 <nav class="nav-menu">
                     <ul>
                         <li><a href="index_french.html">Accueil</a></li>
-                        <li><a href="donate_french.html" class="active">Faire un don</a></li>
-                        <li><a href="about_french.html">À propos de nous</a></li>
-                        <li><a href="success_french.html">Histoires de succès</a></li>
-                        <li><a href="contact_french.html">Contact</a></li>
+                        <li><a href="about_french.html" class="active">À propos de nous</a></li>
                         <li><a href="team_french.html">Notre équipe</a></li>
+                        <li><a href="">Histoires de succès</a></li>
+                        <li><a href="donate_french.html">Faire un don</a></li>
+                        <li><a href="contact_french.html">Contact</a></li>
+                        
                         <li class="lang-toggle">
-                            <a href="index.html" id="translate-link"><i class="fas fa-globe"></i> EN</a>
+                            <a href="" id="translate-link"><i class="fas fa-globe"></i> EN</a>
                         </li>
                     </ul>
                 </nav>
