--- a/team_french.html
+++ b/team_french.html
@@ -1,38 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="fr">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Our Team - Wokovuway Org.</title>
+    <title>Notre Équipe - Wokovuway Org.</title>
+    <meta name="description" content="Rencontrez l'équipe de l'Organisation Humanitaire Wokovuway">
+    <meta name="keywords" content="Wokovuway, humanitaire, Congo, équipe, charité">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Meet the Wokovuway Humanitarian Organization team">
-    <meta name="keywords" content="Wokovuway, humanitarian, Congo, team, charity">
-    <meta name="author" content="Wokovuway">
     <link rel="stylesheet" href="css/team.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
-
 <body>
     <div id="wokovuway-wrapper">
-        <!-- Header & Navigation -->
         <header id="wokovuway-header" class="sticky-header">
             <div class="nav-container">
                 <a href="#" class="logo">
-                    <img src="images/logos1.png" alt="Wokovuway Logo" class="logo-img">
+                    <img src="images/logos1.png" alt="Logo Wokovuway" class="logo-img">
                     <span class="logo-text">Wokovuway Org</span>
                 </a>
                 <div class="hamburger"><i class="fas fa-bars"></i></div>
                 <nav class="nav-menu">
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html" class="active">About Us</a></li>
-                        <li><a href="team.html">Our Team</a></li>
-                        <li><a href="success.html">Success Stories</a></li>
-                        <li><a href="donate.html">Donate</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="index_french.html">Accueil</a></li>
+                        <li><a href="about_french.html" class="active">À propos de nous</a></li>
+                        <li><a href="team_french.html">Notre équipe</a></li>
+                        <li><a href="success_french.html">Histoires de succès</a></li> <!-- Fixed empty href -->
+                        <li><a href="donate_french.html">Faire un don</a></li>
+                        <li><a href="contact_french.html">Contact</a></li>
                         <li class="lang-toggle">
-                            <a href="#" id="translate-link"><i class="fas fa-globe"></i> Fr</a>
+                            <a href="team.html" id="translate-link"><i class="fas fa-globe"></i> EN</a>
                         </li>
                     </ul>
                 </nav>
@@ -42,26 +38,26 @@
         <!-- Team Section -->
         <section id="our-team" class="container">
             <div class="row text-center">
-                <h1>Meet Our Team</h1>
-                <p class="lead">The dedicated individuals driving Wokovuway’s mission forward.</p>
+                <h1>Rencontrez notre équipe</h1>
+                <p class="lead">Les individus dévoués qui font avancer la mission de Wokovuway.</p>
             </div>
             <div class="row team-members">
                 <div class="team-item">
-                    <img src="images/director.jpeg" alt="Director Bagula" class="team-img">
+                    <img src="images/director.jpeg" alt="Membre de l'équipe 1" class="team-img">
                     <div class="team-description">
                         <h3>
-                            Director Bagula
+                            Directeur Bagula
                             <a href="https://www.linkedin.com/in/johnsmith" target="_blank" style="margin-left: 10px;">
                                 <i class="fab fa-linkedin" style="font-size: 1.2rem; color: #0077b5;"></i>
                             </a>
                         </h3>
-                        <p class="role">Founder & Director</p>
-                        <p>Bagula brings 15+ years of humanitarian experience, leading impactful relief efforts for
-                            displaced communities in Congo.</p>
+                        <p class="role">Fondateur & Directeur</p>
+                        <p>Bagula apporte plus de 15 ans d'expérience humanitaire, menant des efforts de secours
+                            impactants pour les communautés déplacées au Congo.</p>
                     </div>
                 </div>
                 <div class="team-item">
-                    <img src="images/jhon.jpg" alt="Nathalis Bahidika" class="team-img">
+                    <img src="images/jhon.jpg" alt="Membre de l'équipe 2" class="team-img">
                     <div class="team-description">
                         <h3>
                             Nathalis Bahidika
@@ -69,13 +65,13 @@
                                 <i class="fab fa-linkedin" style="font-size: 1.2rem; color: #0077b5;"></i>
                             </a>
                         </h3>
-                        <p class="role">Program Manager</p>
-                        <p>Dr. Nathan leads our education and health initiatives, driving impactful projects for
-                            vulnerable communities.</p>
+                        <p class="role">Gestionnaire de programme</p>
+                        <p>Dr. Nathan dirige nos initiatives en éducation et santé, pilotant des projets impactants pour
+                            les communautés vulnérables.</p>
                     </div>
                 </div>
                 <div class="team-item">
-                    <img src="images/maleck.jpg" alt="Vedaste Malekera" class="team-img">
+                    <img src="images/maleck.jpg" alt="Membre de l'équipe 3" class="team-img">
                     <div class="team-description">
                         <h3>
                             Vedaste Malekera
@@ -83,14 +79,14 @@
                                 <i class="fab fa-linkedin" style="font-size: 1.2rem; color: #0077b5;"></i>
                             </a>
                         </h3>
-                        <p class="role">Outreach Coordinator</p>
-                        <p>Vedaste, our financing manager, connects us with local partners and communities, building
-                            trust and ensuring every donation is used efficiently, maintaining transparency and
-                            accountability in all our operations.</p>
+                        <p class="role">Coordinateur de sensibilisation</p>
+                        <p>Vedaste, notre gestionnaire financier, nous connecte avec des partenaires locaux et des
+                            communautés, établissant la confiance et assurant que chaque don est utilisé efficacement,
+                            maintenant transparence et responsabilité dans toutes nos opérations.</p>
                     </div>
                 </div>
                 <div class="team-item">
-                    <img src="images/Moses.jpg" alt="Moise Bisimwa" class="team-img">
+                    <img src="images/Moses.jpg" alt="Membre de l'équipe 4" class="team-img">
                     <div class="team-description">
                         <h3>
                             Moise Bisimwa
@@ -98,8 +94,8 @@
                                 <i class="fab fa-linkedin" style="font-size: 1.2rem; color: #0077b5;"></i>
                             </a>
                         </h3>
-                        <p class="role">IT Specialist</p>
-                        <p>Moise ensures system security and enhances platform development.</p>
+                        <p class="role">Spécialiste IT</p>
+                        <p>Moise assure la sécurité des systèmes et améliore le développement de la plateforme.</p>
                     </div>
                 </div>
             </div>
@@ -110,27 +106,27 @@
             <div class="container">
                 <div class="footer-row">
                     <div class="footer-column">
-                        <h4>About Us</h4>
-                        <p>Wokovu Way is dedicated to empowering communities through innovation and support.</p>
-                        <a href="about.html" class="read-more">Read More</a>
+                        <h4>À propos de nous</h4>
+                        <p>Wokovu Way autonomise les communautés grâce à l'innovation et au soutien.</p>
+                        <a href="about_french.html" class="read-more">En savoir plus</a>
                     </div>
                     <div class="footer-column">
                         <h4>Contact</h4>
-                        <p><strong>Address:</strong> Ndosho, Rulenga Avenue, N°003</p>
-                        <p><strong>Phone:</strong> +243 123 456 789</p>
-                        <p><strong>Email:</strong> <a href="mailto:info@wokovuway.org">info@wokovuway.org</a></p>
+                        <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003</p>
+                        <p><strong>Téléphone :</strong> +243 123 456 789</p>
+                        <p><strong>Email :</strong> <a href="mailto:info@wokovuway.org">info@wokovuway.org</a></p>
                     </div>
                     <div class="footer-column">
-                        <h4>Quick Links</h4>
+                        <h4>Liens rapides</h4>
                         <ul>
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="about.html">About Us</a></li>
-                            <li><a href="contact.html">Contact</a></li>
-                            <li><a href="privacy.html">Privacy and Policy</a></li>
+                            <li><a href="index_french.html">Accueil</a></li>
+                            <li><a href="about_french.html">À propos de nous</a></li>
+                            <li><a href="contact_french.html">Contact</a></li>
+                            <li><a href="privacy_french.html">Politique de confidentialité</a></li>
                         </ul>
                     </div>
                     <div class="footer-column">
-                        <h4>Follow Us</h4>
+                        <h4>Suivez-nous</h4>
                         <div class="social-icons">
                             <a href="https://x.com/wokovuwayngo?s=21" target="_blank"><i class="fab fa-twitter"></i></a>
                             <a href="https://www.facebook.com/wokovuway/" target="_blank"><i
@@ -140,11 +136,11 @@
                         </div>
                     </div>
                     <div class="partners">
-                        <h4>Our Partners</h4>
+                        <h4>Nos partenaires</h4>
                         <a href="https://menengage.org/" target="_blank"><img src="images/men_en.png"
                                 alt="MenEngage"></a>
                         <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg"
-                                alt="US Embassy Kinshasa"></a>
+                                alt="Ambassade des États-Unis à Kinshasa"></a>
                         <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp"
                                 alt="Médecins Sans Frontières"></a>
                         <a href="https://www.unfpa.org/" target="_blank"><img src="images/unfpa.png" alt="UNFPA"></a>
@@ -152,8 +148,8 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>© 2025 Wokovu Way. All Rights Reserved.</p>
-                <p>Designed by <a href="https://www.goshenwebx.com/" target="_blank">Goshen WebX</a></p>
+                <p>© 2025 Wokovu Way. Tous droits réservés.</p>
+                <p>Conçu par <a href="https://www.goshenwebx.com/" target="_blank">Goshen WebX</a></p>
             </div>
         </footer>
     </div>
