--- a/contact_french.html
+++ b/contact_french.html
@@ -29,7 +29,7 @@
                         <li><a href="donate_french.html">Faire un don</a></li>
                         <li><a href="contact_french.html" class="active">Contact</a></li> <!-- Set active here -->
                         <li class="lang-toggle">
-                            <a href="index.html" id="translate-link"><i class="fas fa-globe"></i> EN</a>
+                            <a href="i" id="translate-link"><i class="fas fa-globe"></i> EN</a>
                         </li>
                     </ul>
                 </nav>
