--- a/index_french.html
+++ b/index_french.html
@@ -146,10 +146,13 @@
                     </div>
                     <div class="footer-column">
                         <h4>Contact</h4>
-                        <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003</p>
-                        <p><strong>Téléphone :</strong> +243 123 456 789</p>
-                        <p><strong>Bureau :</strong> +243 123 456 789</p>
-                        <p><strong>Email :</strong> <a href="mailto:info@wokovuway.org">info@wokovuway.org</a></p>
+                        <p><strong>Address:</strong> Ndosho, Rulenga Avenue, N°003</p>
+                        <p class="italic"><strong>Phone:</strong><span class="phone"> +243 123 456 789</span></p>
+                        <p class="italic"></p><strong>Office:</strong> <span class="phone">+243 123 456 789</span></p>
+
+                        <a href="mailto:info@wokovuway.org?subject=Inquiry&body= Bonjour! ...">
+                            <span class="email">info@wokovuway.org</span>
+                        </a>
                     </div>
                     <div class="footer-column">
                         <h4>Liens rapides</h4>
