--- a/privacy.html
+++ b/privacy.html
@@ -132,11 +132,12 @@
                     <div class="footer-column">
                         <h4>Contact</h4>
                         <p><strong>Address:</strong> Ndosho, Rulenga Avenue, N°003</p>
-                        <p><strong>Phone:</strong> +243 123 456 789</p>
-                        <p><strong>Office:</strong> +243 123 456 789</p>
-                
-                        <p><strong>Email:</strong> <a href="mailto:info@wokovuway.org">info@wokovuway.org</a></p>
-                    </div>
+                        <p class="italic"><strong>Phone:</strong><span class="phone"> +243 123 456 789</span></p>
+                        <p class="italic"></p><strong>Office:</strong> <span class="phone">+243 123 456 789</span></p>
+
+                        <a href="mailto:info@wokovuway.org?subject=Inquiry&body=Hello, I have a question about...">
+                            <span class="email">info@wokovuway.org</span>
+                        </a>
                     <div class="footer-column">
                         <h4>Quick Links</h4>
                         <ul>
