--- a/privacy.html
+++ b/privacy.html
@@ -138,6 +138,7 @@
                         <a href="mailto:info@wokovuway.org?subject=Inquiry&body=Hello, I have a question about...">
                             <span class="email">info@wokovuway.org</span>
                         </a>
+                    </div>
                     <div class="footer-column">
                         <h4>Quick Links</h4>
                         <ul>
@@ -152,23 +153,29 @@
                         <h4>Follow Us</h4>
                         <div class="social-icons">
                             <a href="https://x.com/wokovuwayngo?s=21" target="_blank"><i class="fab fa-twitter"></i></a>
-                            <a href="https://www.facebook.com/wokovuway/" target="_blank"><i class="fab fa-facebook"></i></a>
-                            <a href="https://www.instagram.com/wokovuway" target="_blank"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.facebook.com/wokovuway/" target="_blank"><i
+                                    class="fab fa-facebook"></i></a>
+                            <a href="https://www.instagram.com/wokovuway" target="_blank"><i
+                                    class="fab fa-instagram"></i></a>
                         </div>
-                      
+
                     </div>
                     <div class="partners">
                         <h4>Our Partners</h4>
-                        <a href="https://www.partner1.com" target="_blank"><img src="images/men_en.png" alt="Partner 1"></a>
-                        <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg" alt="Partner 2"></a>
-                        <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp" alt="Partner 3"></a>
-                        <a href="https://menengage.org/" target="_blank"><img src="images/unfpa.png" alt="Partner 4"></a>
+                        <a href="https://www.partner1.com" target="_blank"><img src="images/men_en.png"
+                                alt="Partner 1"></a>
+                        <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg"
+                                alt="Partner 2"></a>
+                        <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp"
+                                alt="Partner 3"></a>
+                        <a href="https://menengage.org/" target="_blank"><img src="images/unfpa.png"
+                                alt="Partner 4"></a>
                     </div>
                 </div>
             </div>
 
 
-            
+
 
             <div class="footer-bottom">
                 <p>© 2025 Wokovu Way. All Rights Reserved.</p>
@@ -177,6 +184,6 @@
         </footer>
     </div>
 
-    <script src="js/privacy-policy.js"></script>
+    <script src="js/privacy.js"></script>
 </body>
 </html>
