--- a/success.html
+++ b/success.html
@@ -146,10 +146,26 @@
                     <div class="footer-column">
                         <h4>Quick Links</h4>
                         <ul>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">Services</a></li>
-                            <li><a href="#">Contact</a></li>
+                            <!-- liens pertinents dans le pied de page -->
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="about.html">About Us</a></li>
+                            <li><a href="service.html">Services</a></li>
+                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="privacy.html">Privacy and Policy</a></li>
+                        </ul>
+                    </div>
+                    
+                    <!-- le reste des liens -->
+                    
+                    <div class="footer-column">
+                        <br>
+                        <br>
+                        <ul>
+                            <li><a href="terms.html">Terms and Conditions</a></li>
+                            <li><a href="accessibility.html">Accessibility Statement</a></li>
+                            <li><a href="faq.html">FAQ</a></li>
+                            <li><a href="newsletter.html">Newsletter</a></li>
+                            <li><a href="volunteer.html">Volunteer</a></li>
                         </ul>
                     </div>
                     <div class="footer-column">
