--- a/faq.html
+++ b/faq.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Wokovuway Org.</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Wokovuway Humanitarian Organization">
-    <meta name="keywords" content="Wokovuway, humanitarian, Congo, education, charity, responsive">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FAQ - Wokovuway Org.</title>
+    <meta name="description" content="Frequently Asked Questions about Wokovuway Organization">
+    <meta name="keywords" content="Wokovuway, FAQ, humanitarian, Congo, charity, questions">
     <meta name="author" content="Wokovuway">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/faq.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
-
 <body>
     <div id="wokovuway-wrapper">
         <!-- Header & Navigation -->
@@ -26,133 +24,92 @@
                 <nav class="nav-menu">
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html" class="active">About Us</a></li>
+                        <li><a href="about.html">About Us</a></li>
                         <li><a href="team.html">Our Team</a></li>
                         <li><a href="success.html">Success Stories</a></li>
                         <li><a href="donate.html">Donate</a></li>
                         <li><a href="contact.html">Contact</a></li>
-
-                        <li class="lang-toggle">
-                            <a href="" id="translate-link"><i class="fas fa-globe"></i> Fr </a>
-                        </li>
                     </ul>
                 </nav>
             </div>
         </header>
 
-        <!-- Hero Section -->
-        <section id="wokovuway-hero">
-            <div class="slider">
-                <div class="slide active" style="background-image: url('images/hero.jpg');">
-                    <div class="slide-content">
-                        <h1>Empowering Communities</h1>
-                        <p>Building a brighter future for those in need</p>
-                        <a href="donate.html" class="btn">Donate Now</a>
-                    </div>
-                </div>
-                <div class="slide" style="background-image: url('images/eleve.jpg');">
-                    <div class="slide-content">
-                        <h1>Building For Their Future</h1>
-                        <p>Unlocking potential one child at a time</p>
-                        <a href="donate.html" class="btn">Support Us</a>
-                    </div>
-                </div>
-                <div class="slide" style="background-image: url('images/water_is_life.jpg');">
-                    <div class="slide-content">
-                        <h1>Water is life, a necessity for all</h1>
-                        <p>Your support brings hope</p>
-                        <a href="donate.html" class="btn">Support Us</a>
-                    </div>
-                </div>
-            </div>
-            <div class="slider-dots"></div>
-        </section>
+        <div class="container">
+            <!-- Page Title -->
+            <h1 class="page-title">Frequently Asked Questions</h1>
+            
+            <!-- Introduction -->
+            <section class="faq-section">
+                <h2>Welcome to Our FAQ</h2>
+                <p>Below are answers to some of the most common questions about Wokovuway Nonprofit Organization. If you don’t find what you’re looking for, feel free to <a href="contact.html">contact us</a>. Last updated: March 13, 2025.</p>
+            </section>
 
-        <!-- Features Section -->
-        <section id="wokovuway-features">
-            <div class="features-container">
-                <div class="feature-item">
-                    <i class="fas fa-hands-helping"></i>
-                    <h3>Become a Volunteer</h3>
-                    <p>Join our team to make a difference.</p>
+            <!-- FAQ Items -->
+            <section class="faq-section">
+                <h2>General Questions</h2>
+                <div class="faq-item">
+                    <h3>What is Wokovuway’s mission?</h3>
+                    <p>Wokovuway is dedicated to empowering communities in the Democratic Republic of Congo and beyond through humanitarian aid, education, and innovative support programs.</p>
                 </div>
-                <div class="feature-item">
-                    <i class="fas fa-heart"></i>
-                    <h3>Happy Giving</h3>
-                    <p>Every contribution brings joy.</p>
+                <div class="faq-item">
+                    <h3>Where is Wokovuway based?</h3>
+                    <p>We are headquartered in Goma, DRC, at Ndosho, Rulenga Avenue, N°003.</p>
                 </div>
-                <div class="feature-item">
-                    <i class="fas fa-wallet"></i>
-                    <h3>Donation</h3>
-                    <p>Your support creates impact.</p>
+                <div class="faq-item">
+                    <h3>Who does Wokovuway help?</h3>
+                    <p>We assist vulnerable populations, including displaced individuals, women, children, and communities affected by conflict or poverty, with a focus on sustainable solutions.</p>
                 </div>
-            </div>
-        </section>
+            </section>
 
-        <!-- Mission Section -->
-        <section id="wokovuway-mission" class="section-gray">
-            <div class="mission-container">
-                <h2>Spread Joy, Give Freely</h2>
-                <p>Invest in tomorrow through education, clean water, and community empowerment in the DRC.</p>
-                <div class="mission-image"><img src="images/uniform.jpg" alt="Children in Uniforms"></div>
-            </div>
-        </section>
-
-        <!-- Gallery Section -->
-        <section id="wokovuway-gallery">
-            <div class="gallery-container">
-                <h2>Our Gallery</h2>
-                <p>Compassion in Action</p>
-                <button class="gallery-prev">❮</button>
-                <div class="gallery-slider">
-                    <div class="gallery-slide" style="background-image: url('images/roof_edited.jpg');">
-                        <h3>Donate Today</h3>
-                    </div>
-                    <div class="gallery-slide" style="background-image: url('images/food_shar.jpg');">
-                        <h3>Show You Care</h3>
-                    </div>
-                    <div class="gallery-slide" style="background-image: url('images/women_emp.jpg');">
-                        <h3>Donation is Caring</h3>
-                    </div>
-                    <div class="gallery-slide" style="background-image: url('images/health.jpg');">
-                        <h3>Donation Saves Lives</h3>
-                    </div>
+            <section class="faq-section">
+                <h2>Donations</h2>
+                <div class="faq-item">
+                    <h3>How can I donate to Wokovuway?</h3>
+                    <p>You can donate through our <a href="donate.html">Donate page</a> using various payment methods, including credit cards and bank transfers. All donations are processed securely.</p>
                 </div>
-                <button class="gallery-next">❯</button>
-            </div>
-        </section>
-
-        <!-- Support Section -->
-        <section id="wokovuway-support" class="section-gray">
-            <div class="support-container">
-                <h2>Support Us</h2>
-                <p>Your kindness fosters growth and opportunity.</p>
-                <video src="images/wokovideo.mp4" autoplay loop muted playsinline controls></video>
-            </div>
-        </section>
-
-        <!-- Impact Section -->
-        <section id="wokovuway-impact">
-            <div class="impact-container">
-                <h2>Our Impact</h2>
-                <p>Transforming lives through your generosity</p>
-                <div class="impact-stats">
-                    <div class="impact-item">
-                        <h3>1,000+</h3>
-                        <p>Children Educated</p>
-                    </div>
-                    <div class="impact-item">
-                        <h3>10+</h3>
-                        <p>Communities Supported</p>
-                    </div>
-                    <div class="impact-item">
-                        <h3>10,000+</h3>
-                        <p>People Provided Clean Water</p>
-                    </div>
+                <div class="faq-item">
+                    <h3>Are donations tax-deductible?</h3>
+                    <p>Tax deductibility depends on your country’s laws. In some regions, donations to Wokovuway may qualify. Please consult a tax professional and retain your donation receipt.</p>
                 </div>
-                <a href="success.html" class="btn">See Success Stories</a>
-            </div>
-        </section>
+                <div class="faq-item">
+                    <h3>Can I request a refund for my donation?</h3>
+                    <p>Donations are generally non-refundable, as outlined in our <a href="terms.html">Terms of Use</a>. Contact us at <a href="mailto:info@wokovuway.org">info@wokovuway.org</a> for exceptional circumstances.</p>
+                </div>
+            </section>
+
+            <section class="faq-section">
+                <h2>Getting Involved</h2>
+                <div class="faq-item">
+                    <h3>Can I volunteer with Wokovuway?</h3>
+                    <p>Yes! We welcome volunteers. Please visit our <a href="contact.html">Contact page</a> to express interest and learn about current opportunities.</p>
+                </div>
+                <div class="faq-item">
+                    <h3>How can my organization partner with Wokovuway?</h3>
+                    <p>We collaborate with like-minded organizations. Reach out to us at <a href="mailto:info@wokovuway.org">info@wokovuway.org</a> to discuss potential partnerships.</p>
+                </div>
+            </section>
+
+            <section class="faq-section">
+                <h2>Website and Services</h2>
+                <div class="faq-item">
+                    <h3>Is your website accessible?</h3>
+                    <p>We strive to meet WCAG 2.1 Level AA standards. See our <a href="accessibility.html">Accessibility Statement</a> for details and to report any issues.</p>
+                </div>
+                <div class="faq-item">
+                    <h3>How do you protect my privacy?</h3>
+                    <p>We take privacy seriously. Review our <a href="privacy.html">Privacy Policy</a> to understand how we collect, use, and safeguard your information.</p>
+                </div>
+            </section>
+
+            <!-- Contact Us -->
+            <section class="faq-section">
+                <h2>Still Have Questions?</h2>
+                <p>If your question isn’t answered here, please contact us:</p>
+                <p><strong>Email:</strong> <a href="mailto:info@wokovuway.org">info@wokovuway.org</a></p>
+                <p><strong>Phone:</strong> +243 123 456 789</p>
+                <p><strong>Address:</strong> Ndosho, Rulenga Avenue, N°003, Goma, DRC</p>
+            </section>
+        </div>
 
         <!-- Footer Section -->
         <footer>
@@ -235,7 +192,7 @@
             </div>
         </footer>
     </div>
-    <script src="js/script.js"></script>
-</body>
 
+    <script src="js/faq.js"></script>
+</body>
 </html>
