--- a/index_french.html
+++ b/index_french.html
@@ -16,7 +16,7 @@
         <!-- Header & Navigation -->
         <header id="wokovuway-header" class="sticky-header">
             <div class="nav-container">
-                <a href="#" class="logo">
+                <a href="index_french.html" class="logo">
                     <img src="images/logos1.png" alt="Logo Wokovuway" class="logo-img">
                     <span class="logo-text">Wokovuway Org</span>
                 </a>
@@ -141,43 +141,65 @@
                 <div class="footer-row">
                     <div class="footer-column">
                         <h4>À propos de nous</h4>
-                        <p>Wokovu Way autonomise les communautés grâce à l'innovation et au soutien.</p>
-                        <a href="about_french.html" class="read-more">En savoir plus</a>
+                        <p>Wokovu Way renforce les communautés par l’innovation et le soutien.</p>
+                        <a href="about.html" class="read-more">En savoir plus</a>
                     </div>
                     <div class="footer-column">
                         <h4>Contact</h4>
-                        <p><strong>Address:</strong> Ndosho, Rulenga Avenue, N°003</p>
-                        <p class="italic"><strong>Phone:</strong><span class="phone"> +243 123 456 789</span></p>
-                        <p class="italic"></p><strong>Office:</strong> <span class="phone">+243 123 456 789</span></p>
-
-                        <a href="mailto:info@wokovuway.org?subject=Inquiry&body= Bonjour! ...">
+                        <p><strong>Adresse :</strong> Ndosho, Avenue Rulenga, N°003</p>
+                        <p class="italic"><strong>Téléphone :</strong><span class="phone"> +243 123 456 789</span></p>
+                        <p class="italic"><strong>Bureau :</strong> <span class="phone">+243 123 456 789</span></p>
+                        <a
+                            href="mailto:info@wokovuway.org?subject=Inquiry&body=Bonjour, j’ai une question à propos de...">
                             <span class="email">info@wokovuway.org</span>
                         </a>
                     </div>
                     <div class="footer-column">
                         <h4>Liens rapides</h4>
                         <ul>
+                            <!-- liens pertinents dans le pied de page -->
                             <li><a href="index_french.html">Accueil</a></li>
                             <li><a href="about_french.html">À propos de nous</a></li>
-                            <li><a href="#">Services</a></li>
+                            <li><a href="service_fr.html">Services</a></li>
                             <li><a href="contact_french.html">Contact</a></li>
-                            <li><a href="privacy_french.html">Politique de confidentialité</a></li>
+                            <li><a href="privacy_fr.html">Confidentialité et politique</a></li>
                         </ul>
                     </div>
+
+                    <!-- le reste des liens -->
+
+                    <div class="footer-column">
+                        <br>
+                        <br>
+                        <ul>
+                            <li><a href="terms_french.html">Conditions générales</a></li>
+                            <li><a href="accessibility_french.html">Déclaration d’accessibilité</a></li>
+                            <li><a href="faq_fr.html">FAQ</a></li>
+                            <li><a href="newsletter_fr.html">Lettre d’information</a></li>
+                            <li><a href="volunteer_fr.html">Bénévole</a></li>
+                        </ul>
+                    </div>
+
                     <div class="footer-column">
                         <h4>Suivez-nous</h4>
                         <div class="social-icons">
                             <a href="https://x.com/wokovuwayngo?s=21" target="_blank"><i class="fab fa-twitter"></i></a>
-                            <a href="https://www.facebook.com/wokovuway/" target="_blank"><i class="fab fa-facebook"></i></a>
-                            <a href="https://www.instagram.com/wokovuway" target="_blank"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.facebook.com/wokovuway/" target="_blank"><i
+                                    class="fab fa-facebook"></i></a>
+                            <a href="https://www.instagram.com/wokovuway" target="_blank"><i
+                                    class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                     <div class="partners">
                         <h4>Nos partenaires</h4>
-                        <a href="https://www.partner1.com" target="_blank"><img src="images/men_en.png" alt="Partenaire 1"></a>
-                        <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg" alt="Partenaire 2"></a>
-                        <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp" alt="Partenaire 3"></a>
-                        <a href="https://menengage.org/" target="_blank"><img src="images/unfpa.png" alt="Partenaire 4"></a>
+                        <a href="https://www.partner1.com" target="_blank"><img src="images/men_en.png"
+                                alt="Partenaire 1"></a>
+                        <a href="https://cd.usembassy.gov/kinshasa/" target="_blank"><img src="images/uskin.jpg"
+                                alt="Partenaire 2"></a>
+                        <a href="https://www.medecinssansfrontieres.ca/" target="_blank"><img src="images/med.webp"
+                                alt="Partenaire 3"></a>
+                        <a href="https://menengage.org/" target="_blank"><img src="images/unfpa.png"
+                                alt="Partenaire 4"></a>
                     </div>
                 </div>
             </div>
