--- a/team.html
+++ b/team.html
@@ -115,18 +115,28 @@
                         <a href="about.html" class="read-more">Read More</a>
                     </div>
                     <div class="footer-column">
-                        <h4>Contact</h4>
-                        <p><strong>Address:</strong> Ndosho, Rulenga Avenue, N°003</p>
-                        <p><strong>Phone:</strong> +243 123 456 789</p>
-                        <p><strong>Email:</strong> <a href="mailto:info@wokovuway.org">info@wokovuway.org</a></p>
-                    </div>
-                    <div class="footer-column">
                         <h4>Quick Links</h4>
                         <ul>
+                            <!-- liens pertinents dans le pied de page -->
                             <li><a href="index.html">Home</a></li>
                             <li><a href="about.html">About Us</a></li>
+                            <li><a href="service.html">Services</a></li>
                             <li><a href="contact.html">Contact</a></li>
                             <li><a href="privacy.html">Privacy and Policy</a></li>
+                        </ul>
+                    </div>
+                    
+                    <!-- le reste des liens -->
+                    
+                    <div class="footer-column">
+                        <br>
+                        <br>
+                        <ul>
+                            <li><a href="terms.html">Terms and Conditions</a></li>
+                            <li><a href="accessibility.html">Accessibility Statement</a></li>
+                            <li><a href="faq.html">FAQ</a></li>
+                            <li><a href="newsletter.html">Newsletter</a></li>
+                            <li><a href="volunteer.html">Volunteer</a></li>
                         </ul>
                     </div>
                     <div class="footer-column">
